# xcontacts

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py  models.py
app/data_providers/: dummy_data_provider.py
app/migrations/: env.py
app/migrations/versions/: ee15bf7df8da_initial.py
app/services/: contacts_service.py
tests/: test.robot
